feat: dockerize app
create dockerfiles and docker-compose, make changes needed for the app to launch in a container.

These changes were:
  updating package-lock so that it's up to date
  Using ClassPathResource to refer to default files instead of their path
  Increasing the allowed size of the angular app so that it doesn't crash on build
  Have application.properties use env variables when provided (for the db connection)